--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pet Adopt Portal</title>
-    <link rel="stylesheet" href="pet_adopt_portal_style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
@@ -41,6 +41,6 @@
 <br>
 <p align="center"><b>@Love by Vinay</b></p>
 
-  <script src="pet_adopt_portal_script.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
